# GPTCache

./: docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
gptcache/: client.py
gptcache/adapter/: adapter.py
gptcache/manager/: data_manager.py
gptcache/manager/scalar_data/: base.py  dynamo_storage.py  mongo.py  redis_storage.py  sql_storage.py
gptcache_server/: server.py
gptcache_server/dockerfiles/: Dockerfile.nx
numexa-ui/: Dockerfile
