[tool.poetry]
name = "gptcache"
version = "0.1.42"
description = "GPTCache, a powerful caching library that can be used to speed up and lower the cost of chat applications that rely on the LLM service. GPTCache works as a memcache for AIGC applications, similar to how Redis works for traditional applications."
authors = ["dreamcode1994 <118388087+dreamcode1994@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
cachetools = "^5.3.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
loguru = "^0.7.2"
pytest-cov = "^4.1.0"
pytest = "^7.4.2"
coverage = "^7.3.1"
pytest-assume = "^2.4.3"
pytest-timeout = "^2.1.0"
pytest-repeat = "^0.9.1"
pytest-level = "^0.1.3"
pytest-xdist = "^3.3.1"
pytest-loguru = "^0.2.0"
pytest-rerunfailures = "^12.0"
pytest-html = "^4.0.2"
pytest-sugar = "^0.9.7"
pytest-parallel = "^0.1.1"
psycopg2-binary = "^2.9.8"
transformers = "^4.33.3"
torch = "^2.0.1"
mock = "^5.1.0"
pexpect = "^4.8.0"
spacy = "^3.6.1"
safetensors = "^0.3.3"
typing-extensions = "^4.8.0"
stability-sdk = "^0.8.4"
grpcio = "1.53.0"
pymilvus = "^2.3.1"
wheel = "^0.41.2"
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
